# toki

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Comparison.md  README.ko.md  README.md
.claude/commands/: bump-schema.md  release.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release-linux.yml  release.yml
benches/: .gitignore  COMPARISON.ko.md  COMPARISON.md  benchmark.py  plot_comparison.py
data/: toki_sync.db-shm  toki_sync.db-wal
docs/: DESIGN.ko.md  DESIGN.md  USAGE.ko.md  USAGE.md  claude-code-jsonl-format.ko.md  claude-code-jsonl-format.md  codex-cli-analysis.md  db-comparison.md  gemini-cli-analysis.md  otel-comparison.md  plan-multi-provider.md  why-not-otel.ko.md  why-not-otel.md
specs/: constitution.md
src/: checkpoint.rs  config.rs  db.rs  engine.rs  lib.rs  main.rs  pricing.rs  query.rs  query_parser.rs  retention.rs  settings.rs  update.rs  writer.rs
src/common/: mod.rs  schema.rs  time.rs  types.rs
src/daemon/: broadcast.rs  listener.rs  mod.rs  pidfile.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs
src/platform/macos/: mod.rs
src/platform/windows/: mod.rs
src/providers/: mod.rs
src/providers/claude_code/: mod.rs  parser.rs
src/providers/codex/: mod.rs  parser.rs
src/providers/gemini/: mod.rs
src/sink/: http.rs  json.rs  mod.rs  print.rs  uds.rs
src/sync/: backoff.rs  client.rs  credentials.rs  mod.rs  protocol.rs  thread.rs
