[package]
name = "clitrace"
version = "0.1.0"
edition = "2021"
description = "AI CLI tool token usage tracker module"

[lib]
name = "clitrace"
path = "src/lib.rs"

[[bin]]
name = "clitrace"
path = "src/main.rs"

[dependencies]
notify = "6"
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bincode = "1"
crossbeam-channel = "0.5"
dirs = "5"
glob = "0.3"
num_cpus = "1"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tempfile = "3"
