[package]
name = "toki"
version = "2.0.0"
edition = "2021"
description = "AI CLI tool token usage tracker module"
license = "FSL-1.1-Apache-2.0"
repository = "https://github.com/korjwl1/toki"
homepage = "https://github.com/korjwl1/toki"

[lib]
name = "toki"
path = "src/lib.rs"

[[bin]]
name = "toki"
path = "src/main.rs"

[dependencies]
notify = "6"
fjall = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bincode = "1"
crossbeam-channel = "0.5"
dirs = "5"
glob = "0.3"
rayon = "1.10"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std"] }
chrono-tz = "0.10"
comfy-table = ">=7.1, <7.2"
ureq = { version = "2", features = ["json"] }
keyring = "2"
cursive = { version = "0.21", default-features = false, features = ["crossterm-backend"] }
memmap2 = "0.9.10"
memchr = "2.8.0"
uuid = { version = "1", features = ["v4"] }
zstd = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tempfile = "3"
